<resources>
    <string name="app_name">Android LevelUp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="movies">All Movies</string>
    <string name="action">Action</string>
    <string name="comedy">Comedy</string>
    <string name="crime">Crime</string>
    <string name="horror">Horror</string>
    <string name="romance">Romance</string>
</resources>
