<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_movies"
                android:icon="@drawable/ic_movies"
                android:title="@string/movies"/>
        <item
                android:id="@+id/nav_action"
                android:icon="@drawable/ic_action"
                android:title="@string/action"/>
        <item
                android:id="@+id/nav_comedy"
                android:icon="@drawable/ic_comedy"
                android:title="@string/comedy"/>
        <item
                android:id="@+id/nav_crime"
                android:icon="@drawable/ic_crime"
                android:title="@string/crime"/>
        <item
                android:id="@+id/nav_horror"
                android:icon="@drawable/ic_horror"
                android:title="@string/horror"/>
        <item
                android:id="@+id/nav_romance"
                android:icon="@drawable/ic_romance"
                android:title="@string/romance"/>
    </group>

</menu>
